20241204 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
@@ -19,6 +19,7 @@ Option2=By Group
 Bukrs=Company Code
 Gjahr=Fiscal Year
 Period=Period
+Ledge=Ledge
 Result=Result
 ButtonText=Recalculate
 CompanyCode=CompanyCode
@@ -35,42 +36,58 @@ ProfitCenterName=ProfitCenterName
 UpperProduct01=UpperProduct01
 ValuationClass01=ValuationClass01
 Cost01=Cost01
+ValuationQuantity01=Stock01
 UpperProduct02=UpperProduct02
 ValuationClass02=ValuationClass02
 Cost02=Cost02
+ValuationQuantity02=Stock02
 UpperProduct03=UpperProduct03
 ValuationClass03=ValuationClass03
 Cost03=Cost03
+ValuationQuantity03=Stock03
 UpperProduct04=UpperProduct04
 ValuationClass04=ValuationClass04
 Cost04=Cost04
+ValuationQuantity04=Stock04
 UpperProduct05=UpperProduct05
 ValuationClass05=ValuationClass05
 Cost05=Cost05
+ValuationQuantity05=Stock05
 UpperProduct06=UpperProduct06
 ValuationClass06=ValuationClass06
 Cost06=Cost06
+ValuationQuantity06=Stock06
 UpperProduct07=UpperProduct07
 ValuationClass07=ValuationClass07
 Cost07=Cost07
+ValuationQuantity07=Stock07
 UpperProduct08=UpperProduct08
 ValuationClass08=ValuationClass08
 Cost08=Cost08
+ValuationQuantity08=Stock08
 UpperProduct09=UpperProduct09
 ValuationClass09=ValuationClass09
 Cost09=Cost09
+ValuationQuantity09=Stock09
 UpperProduct10=UpperProduct10
 ValuationClass10=ValuationClass10
 Cost10=Cost10
+ValuationQuantity10=Stock10
 MaterialCost2000=MaterialCost2000
 MaterialCost3000=MaterialCost3000
 PurchasingGroup=PurchasingGroup
+PurGrpAmount1=PurGrpAmount1
+PurGrpAmount2=PurGrpAmount2
 PurGrpAmount=PurGrpAmount
+ChargeableAmount1=ChargeableAmount1
+ChargeableAmount2=ChargeableAmount2
 ChargeableAmount=ChargeableAmount
 ChargeableRate=ChargeableRate
 PreviousStockAmount=PreviousStockAmount
 CurrentStockAmount=CurrentStockAmount
+CustomerRevenue1=CustomerRevenue1
 CustomerRevenue=CustomerRevenue
+Revenue1=Revenue1
 Revenue=Revenue
 CurrentStockSemi=CurrentStockSemi
 CurrentStockFin=CurrentStockFin
@@ -79,6 +96,7 @@ StockChangeAmount=StockChangeAmount
 PaidMaterialCost=PaidMaterialCost
 RevenueRate=RevenueRate
 Currency=Currency
+Unit=Unit
 
 msgInputBukrs=Please input CompanyCode
 msgInputYear=Please input FiscalYear
