--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -17,6 +17,7 @@ flpTitle=有償支給品の純額計算
 Option1=品番単位計算実行
 Option2=購買グループ単位計算実行
 Bukrs=会社コード
+Ledge=元帳
 Gjahr=会計年度
 Period=会計期間
 Result=Result
@@ -35,42 +36,58 @@ ProfitCenterName=利益センタテキスト
 UpperProduct01=上位品番
 ValuationClass01=評価クラス
 Cost01=標準原価-材料費
+ValuationQuantity01=库存数量
 UpperProduct02=上位品番
 ValuationClass02=評価クラス
 Cost02=標準原価-材料費
+ValuationQuantity02=库存数量
 UpperProduct03=上位品番
 ValuationClass03=評価クラス
 Cost03=標準原価-材料費
+ValuationQuantity03=库存数量
 UpperProduct04=上位品番
 ValuationClass04=評価クラス
 Cost04=標準原価-材料費
+ValuationQuantity04=库存数量
 UpperProduct05=上位品番
 ValuationClass05=評価クラス
 Cost05=標準原価-材料費
+ValuationQuantity05=库存数量
 UpperProduct06=上位品番
 ValuationClass06=評価クラス
 Cost06=標準原価-材料費
+ValuationQuantity06=库存数量
 UpperProduct07=上位品番
 ValuationClass07=評価クラス
 Cost07=標準原価-材料費
+ValuationQuantity07=库存数量
 UpperProduct08=上位品番
 ValuationClass08=評価クラス
 Cost08=標準原価-材料費
+ValuationQuantity08=库存数量
 UpperProduct09=上位品番
 ValuationClass09=評価クラス
 Cost09=標準原価-材料費
+ValuationQuantity09=库存数量
 UpperProduct10=上位品番
 ValuationClass10=評価クラス
 Cost10=標準原価-材料費
+ValuationQuantity10=库存数量
 MaterialCost2000=標準原価-材料費合計-2000
 MaterialCost3000=標準原価-材料費合計-3000
 PurchasingGroup=購買グループ
+PurGrpAmount1=当期購買グループ期初
+PurGrpAmount2=当期購買グループ本年初-上个月末
 PurGrpAmount=当期購買グループ別仕入金額
+ChargeableAmount1=当期有償支給品期初
+ChargeableAmount2=当期有償支給品本年初-上个月末
 ChargeableAmount=当期有償支給品仕入金額
 ChargeableRate=ChargeableRate
 PreviousStockAmount=在庫金額（前期末）
 CurrentStockAmount=在庫金額（当期末）-有償支給品
+CustomerRevenue1=該当得意先の総売上高期初
 CustomerRevenue=該当得意先の総売上高
+Revenue1=会社レベルの総売上高期初
 Revenue=会社レベルの総売上高
 CurrentStockSemi=在庫金額（当期末）-半製品
 CurrentStockFin=在庫金額（当期末）-製品
@@ -79,6 +96,7 @@ StockChangeAmount=在庫増減金額
 PaidMaterialCost=払いだし材料費
 RevenueRate=総売上金額占有率
 Currency=Currency
+Unit=Unit
 
 msgInputBukrs=Please input CompanyCode
 msgInputYear=Please input FiscalYear
