--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n_ja.properties
@@ -33,27 +33,27 @@ PurgDocOrderQuantityUnit = 発注数量単位
 ConditionScaleQuantity = スケール数量
 Supplier = 仕入先コード
 organizationbpname1_ja = 仕入先名称
-organizationbpname1_en = Name of manufacturer
+organizationbpname1_en = Name of Manufacturer
 PurchasingGroup = 購買グループ
 PurchasingGroupName = 購買グループ名称
 FirstSalesSpecProductGroup = 品目グループ1
 CreationDate_1 = 登録日
 CreatedByUser = 登録者
-CreationDate_2 = Quotation creation date
+CreationDate_2 = Quotation Creation Date
 OwnInventoryManagedProduct = 内部品目コード
 ProductOID = 旧品目コード
 BaseUnit = 基本数量単位
-ManufacturerNumber = Manufacturer code
-OrganizationBPName1 = Name of manufacturer
+ManufacturerNumber = Manufacturer Code
+OrganizationBPName1 = Name of Manufacturer
 ProductManufacturerNumber = MPN
 standardpurchaseorderquantity = Unit Price
-Taxprice = Tax price
+Taxprice = Tax Price
 UnitPrice_plnt = 標準原価
-UnitPrice_standard = 標準原価(unit price)
+UnitPrice_standard = 標準原価(Unit Price)
 PriceUnitQty = 価格単位
-Currency_standard = Standard currency
+Currency_standard = Standard Currency
 orderpriceunittoorderunitnmrtr = Rate
-latestoffer = Latest offer
+latestoffer = Latest Offer
 SupplierIsFixed = 固定仕入先
 MaterialPlannedDeliveryDurn = 納入予定日数
 ShippingConditionName = NCNR・cancelルール
@@ -67,7 +67,7 @@ SupplierCertOriginCountry = 原産国
 SupplierCertOriginRegion = 地域(都道府県)
 IncotermsClassification = 基軸通貨
 DeliveryLT = Delivery LT (+45 days)
-PlusDay = Plus day
+PlusDay = Plus Day
 PurchasingInfoRecordCategory = 購買情報区分
 SupplierConfirmationControlKey = 確認管理
 ValuationClass = 評価クラス
