--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -76,12 +76,12 @@ ValuationQuantity10=库存数量
 MaterialCost2000=標準原価-材料費合計-2000
 MaterialCost3000=標準原価-材料費合計-3000
 PurchasingGroup=購買グループ
-PurGrpAmount1=当期購買グループ期初
-PurGrpAmount2=当期購買グループ本年初-上个月末
-PurGrpAmount=当期購買グループ別仕入金額
-ChargeableAmount1=当期有償支給品期初
-ChargeableAmount2=当期有償支給品本年初-上个月末
-ChargeableAmount=当期有償支給品仕入金額
+PurGrpAmount1=購買グループ仕入金額（期首）
+PurGrpAmount2=購買グループ仕入金額（今年初-前期末）
+PurGrpAmount=購買グループ仕入金額（当期）
+ChargeableAmount1=有償支給品仕入金額（期首）
+ChargeableAmount2=有償支給品仕入金額（今年初-前期末）
+ChargeableAmount=有償支給品仕入金額（当期）
 ChargeableRate=ChargeableRate
 PreviousStockAmount=在庫金額（前期末）
 CurrentStockAmount=在庫金額（当期末）-有償支給品
