--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -17,7 +17,8 @@ flpTitle=販売計画一覧
 SalesOrganization=販売組織           
 Customer=得意先コード  
 CustomerBar=得意先                 
-YearDate=年月                  
+YearDate=年月  
+DateRange=年月               
 Product=品番  
 ProductBar=品目                     
 plantype=計画タイプ                    
@@ -39,6 +40,11 @@ GrossProfit=売上総利益(単価)
 ContributionProfitTotal=貢献利益
 GrossProfitTotal=売上総利益
 salesplanamountindspcrcy=QTY
+CustomerAccountAssignmentGroup=得意先勘定設定グループ
+FirstSalesSpecProductGroup=品目グループ1
+SecondSalesSpecProductGroup=品目グループ2
+ThirdSalesSpecProductGroup=品目グループ3
+AccountDetnProductGroup=品目勘定設定グループグループ
 
 DataError=データエラー
 
