--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -53,3 +53,5 @@ salesplanamountindspcrcyLabel=QTY
 SalesAmountLabel=売上
 ContributionProfitTotalLabel=貢献利益
 GrossProfitTotalLabel=売上総利益
+materialcost2000perLabel=貢献利益(単価)
+ManufacturingcostperLabel=売上総利益(単価)
