20241209 sd-032 add filter

--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -45,7 +45,7 @@ FirstSalesSpecProductGroup=品目グループ1
 SecondSalesSpecProductGroup=品目グループ2
 ThirdSalesSpecProductGroup=品目グループ3
 AccountDetnProductGroup=品目勘定設定グループグループ
-
+ConditionCurrency=通貨
 DataError=データエラー
 
 ConditionRateValueLabel=単価
