FICO-019＆026_長期滞在＆低価法レポート 20241210

--- a/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
@@ -118,7 +118,8 @@ ReCalculate=再計算
 
 # Message
 FilterMandatory={0} は入カ必須フィ-ルドです
-ConfirmMessage=Would you like to {0}?
+# ConfirmMessage=Would you like to {0}?
+ConfirmMessage=年齢を再計算しますか？再計算を実行すると、前回保存されたデータを上書きします
 DoneMessage=再計算完了
 
 #XFLD,36
