20241210 工程別製造費用 i18n

--- a/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
@@ -25,3 +25,18 @@ costratescalefactor1=計画原価比率スケールファクタ
 
 #XFLD,120: Label for a column title
 costratescalefactor2=実際原価比率スケールファクタ
+
+#XFLD,120: Label for a column title
+orderid=製造指図
+orderid1=請求伝票
+#XFLD,120: Label for a column title
+accountingdocument=会計伝票
+
+#XFLD,120: Label for a column title
+ledgergllineitem=明細
+
+#XFLD,120: Label for a column title
+key4=伝票タイプ
+
+#XFLD,120: Label for a column title
+orderitem=明細
