20241211 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
@@ -26,6 +26,7 @@ SupplierName=Supplier Name
 MaterialGroup=Material Group
 Material=Material
 SupplierMaterialNumber=SupplierMat. Num.
+CustomerMaterial=Customer Material
 ProductManufacturerNumber=ProductManufacturerNumber
 PurchaseOrderItemText=Short Text
 NetPrice1=Net Price 1
