--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -26,8 +26,8 @@ SupplierName=仕入先名称
 MaterialGroup=品目 Group
 Material=品目コード
 SupplierMaterialNumber=仕入先品目コード
-ProductManufacturerNumber=顧客品番
-
+CustomerMaterial=顧客品番
+ProductManufacturerNumber=メーカー品番
 PurchaseOrderItemText=品目テキスト
 NetPrice1=発注単価
 DocumentCurrency=取引通貨
