--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -34,7 +34,7 @@ ProductName=品名
 ConditionRateValue=単価           
 MaterialCost2000=材料費            
 Manufacturingcost=加工費  
-MaterialCost2000_n=材料費            
+materialcost2000_n=材料費            
 Manufacturingcost_n=加工費  
 SalesAmount=売上
 ContributionProfit=貢献利益(単価)
