20241213 SD011 売上検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
@@ -20,6 +20,7 @@ AcceptPeriod=AcceptPeriod
 AcceptPeriodFrom=AcceptPeriodFrom
 AcceptPeriodTo=AcceptPeriodTo
 tableHeaderTitle=Result
+groupHeaderTitle=Result({0})
 
 #Button
 saveButtonText=save
