--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
@@ -20,6 +20,7 @@ AcceptPeriod=検収期間
 AcceptPeriodFrom=検収期間From
 AcceptPeriodTo=検収期間To
 tableHeaderTitle=Result
+groupHeaderTitle=Result({0})
 
 #Button
 saveButtonText=保存
