--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -87,3 +87,6 @@ MailAddress=Mail Address
 #Text
 selectOperation=Please select a function operation.
 confirmMessage=Would you like to {0}?
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
