20241214 SD-032 販売計画一覧 add custom export

--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -57,3 +57,16 @@ ContributionProfitTotalLabel=貢献利益
 GrossProfitTotalLabel=売上総利益
 materialcost2000perLabel=貢献利益(単価)
 ManufacturingcostperLabel=売上総利益(単価)
+
+onExport=エクセル出力
+onBIExport=BI専用
+
+GLAccount1=GLAccount1
+GLAccountName1=GLAccountName1
+GLAccount2=GLAccount2
+GLAccountName2=GLAccountName2
+GLAccount3=GLAccount3
+GLAccountName3=GLAccountName3
+DisplayCurrency1=DisplayCurrency1
+currency=currency
+currency1=currency1
