20241214 支付方法变更

--- a/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
@@ -46,8 +46,8 @@ Country=国
 RequisitionDate=転記日付
 Date=転記日付
 SearchBtn=開始
-
-
+SupplierCompany=支払先
+SupplierCompanyName=支払先名称
 #Table Column
 Status=ステータス
 Message=メッセージ
