--- a/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
@@ -20,7 +20,7 @@ excuteBtn=本実行
 exportBtn=エクセル出力
 jobBtn=ジョブ実行
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
-
+ExportBtn=エクセル出力
 
 AmountInCompanyCodeCurrency=金額
 CompanyCodeCurrency=通貨
