20241216 SD010 売上検収突合upload

--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
@@ -74,6 +74,8 @@ AccceptAmount=Acccept Amount
 Currency=Currency
 TaxRate=Tax Rate
 OutsideData=Outside Data
+AcceptPeriodFrom=AcceptPeriod From
+AcceptPeriodTo=AcceptPeriod To
 
 #Message
 msg001=There are error messages,please correct and import again!
