--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
@@ -75,6 +75,8 @@ AccceptAmount=検収金額
 Currency=通貨
 TaxRate=消費税率
 OutsideData=SAP外売上区分
+AcceptPeriodFrom=検収期間From
+AcceptPeriodTo=検収期間To
 
 #Message
 msg001=エラーメッセージがあります。ファイルを確認して再インポートしてください
