20241216 FICO-015 支付方法变更搜索帮助

--- a/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
@@ -52,4 +52,4 @@ SupplierCompanyName=支払先名称
 Status=ステータス
 Message=メッセージ
 msgNoSelect=まずデータを選択してください
-
+msgFilterError=一意の説明を入力するか、一覧からアイテムを選択してください。
