20241217 納受領書出力 添加字段

--- a/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=納受領出力
+appTitle=納受領書出力
 
 #YDES: Application description
-appDescription=納受領出力
+appDescription=納受領書出力
 
 #XBUT,25
 print=印刷
