Picking List 权限检查

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -95,3 +95,7 @@ Message8=Reservation {0} Item {1} is not waiting to be posted.
 StandardListFileName=Picking List_Registration
 CustomListFileName=Picking List
 DetailsFileName=Picking List_Production Order Details
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
