--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
@@ -91,3 +91,5 @@ inventorytype=Inventory Type
 
 #XFLD,120: Label for a column title
 baseUnitOfMeasure=Base Unit of Measure
+
+InventoryType=Inventory Type
