--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
@@ -93,3 +93,5 @@ inventorytype=カテゴリ
 
 #XFLD,120: Label for a column title
 baseUnitOfMeasure=Base Unit of Measure
+
+InventoryType=カテゴリー（A：期初／B：関係会社）
