20241218 FICO-007 有償支給純額処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
@@ -89,6 +89,8 @@ CustomerRevenue1=CustomerRevenue1
 CustomerRevenue=CustomerRevenue
 Revenue1=Revenue1
 Revenue=Revenue
+PurGrpTot=PurGrp Total
+ChargeableTot=Chargeable Total
 CurrentStockSemi=CurrentStockSemi
 CurrentStockFin=CurrentStockFin
 CurrentStockTotal=CurrentStockTotal
