--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -68,7 +68,7 @@ ValuationQuantity08=库存数量
 UpperProduct09=上位品番
 ValuationClass09=評価クラス
 Cost09=標準原価-材料費
-ValuationQuantity09=库存数量
+ValuationQuantity09=在庫数量
 UpperProduct10=上位品番
 ValuationClass10=評価クラス
 Cost10=標準原価-材料費
@@ -82,13 +82,15 @@ PurGrpAmount=購買グループ仕入金額（当期）
 ChargeableAmount1=有償支給品仕入金額（期首）
 ChargeableAmount2=有償支給品仕入金額（今年初-前期末）
 ChargeableAmount=有償支給品仕入金額（当期）
-ChargeableRate=ChargeableRate
+ChargeableRate=仕入率
 PreviousStockAmount=在庫金額（前期末）
 CurrentStockAmount=在庫金額（当期末）-有償支給品
 CustomerRevenue1=該当得意先の総売上高期初
 CustomerRevenue=該当得意先の総売上高
 Revenue1=会社レベルの総売上高期初
 Revenue=会社レベルの総売上高
+PurGrpTot=購買グループ仕入金額（合計）
+ChargeableTot=有償支給品仕入金額（合計）
 CurrentStockSemi=在庫金額（当期末）-半製品
 CurrentStockFin=在庫金額（当期末）-製品
 CurrentStockTotal=在庫金額（当期末）-合計
