FICO-019＆026_長期滞在＆低価法レポート 20241218

--- a/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
@@ -28,7 +28,8 @@ BusinessPartner=得意先コード
 BusinessPartnerName=得意先コードテキスト 
 ValuationQuantity=数量						
 BaseUnit=基本数量単位						
-ActualCost=実際原価										
+ActualCost=実際原価			
+MaterialPriceUnitQty=価格単位							
 InventoryAmount=在庫金額						
 ValuationUnitPrice=評価単価						
 ValuationAmount=評価金額						
