20241219 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -36,35 +36,35 @@ ProfitCenterName=利益センタテキスト
 UpperProduct01=上位品番
 ValuationClass01=評価クラス
 Cost01=標準原価-材料費
-ValuationQuantity01=库存数量
+ValuationQuantity01=在庫数量
 UpperProduct02=上位品番
 ValuationClass02=評価クラス
 Cost02=標準原価-材料費
-ValuationQuantity02=库存数量
+ValuationQuantity02=在庫数量
 UpperProduct03=上位品番
 ValuationClass03=評価クラス
 Cost03=標準原価-材料費
-ValuationQuantity03=库存数量
+ValuationQuantity03=在庫数量
 UpperProduct04=上位品番
 ValuationClass04=評価クラス
 Cost04=標準原価-材料費
-ValuationQuantity04=库存数量
+ValuationQuantity04=在庫数量
 UpperProduct05=上位品番
 ValuationClass05=評価クラス
 Cost05=標準原価-材料費
-ValuationQuantity05=库存数量
+ValuationQuantity05=在庫数量
 UpperProduct06=上位品番
 ValuationClass06=評価クラス
 Cost06=標準原価-材料費
-ValuationQuantity06=库存数量
+ValuationQuantity06=在庫数量
 UpperProduct07=上位品番
 ValuationClass07=評価クラス
 Cost07=標準原価-材料費
-ValuationQuantity07=库存数量
+ValuationQuantity07=在庫数量
 UpperProduct08=上位品番
 ValuationClass08=評価クラス
 Cost08=標準原価-材料費
-ValuationQuantity08=库存数量
+ValuationQuantity08=在庫数量
 UpperProduct09=上位品番
 ValuationClass09=評価クラス
 Cost09=標準原価-材料費
@@ -72,7 +72,7 @@ ValuationQuantity09=在庫数量
 UpperProduct10=上位品番
 ValuationClass10=評価クラス
 Cost10=標準原価-材料費
-ValuationQuantity10=库存数量
+ValuationQuantity10=在庫数量
 MaterialCost2000=標準原価-材料費合計-2000
 MaterialCost3000=標準原価-材料費合計-3000
 PurchasingGroup=購買グループ
