--- a/bc-s4apps01/zcommonconf/webapp/i18n/i18n_ja.properties
+++ b/bc-s4apps01/zcommonconf/webapp/i18n/i18n_ja.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=共通定数テーブル
+appTitle=BTP汎用管理
 
 #YDES: Application description
-appDescription=共通定数テーブル
+appDescription=BTP汎用管理
 
 #XFLD,60
-flpTitle=共通定数テーブル
+flpTitle=BTP汎用管理
