20241220 SD010 売上検収突合upload

--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
@@ -57,7 +57,7 @@ Type=実行結果
 Message=メッセージ
 SalesOrganization=販売組織
 Customer=得意先BPコード
-PeriodType=時期区分
+PeriodType=期間区分
 AcceptPeriod=検収期間
 CustomerPO=得意先PO番号
 ItemNo=明細番号
