MR申请权限检查

--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -89,4 +89,4 @@ selectOperation=機能操作を選択してください。
 confirmMessage={0}しますか？
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
-noAuthorityPlant=プラント {0} の権限がありませ。
+noAuthorityPlant=プラント {0} の権限がありません。
