--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
@@ -98,4 +98,4 @@ DetailsFileName=ピッキングリスト_製造指図明細
 
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
-noAuthorityPlant=プラント {0} の権限がありませ。
+noAuthorityPlant=プラント {0} の権限がありません。
