--- a/pp-s4apps01/zemailmasterupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zemailmasterupload/webapp/i18n/i18n_en.properties
@@ -10,3 +10,7 @@ appDescription=Email Master Management
 
 #XFLD,69
 flpTitle=Email Master Management
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
