--- a/pp-s4apps01/zemailmasterupload/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zemailmasterupload/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,7 @@ appDescription=メール送信マスタ管理
 
 #XFLD,69
 flpTitle=メール送信マスタ管理
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
