--- a/pp-s4apps01/zmfgorderinfo/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmfgorderinfo/webapp/i18n/i18n_en.properties
@@ -10,3 +10,7 @@ appDescription=Manufacturing Order Infomation Report
 
 #XFLD,55.5
 flpTitle=Manufacturing Order Infomation Report
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
