--- a/pp-s4apps01/zmfgorderinfo/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zmfgorderinfo/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,7 @@ appDescription=製造指図情報の出力
 
 #XFLD,55.5
 flpTitle=製造指図情報の出力
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
