PP-001 BOM一括登録 权限检查

--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
@@ -55,3 +55,6 @@ BillOfMaterialSubItemQuantity=副明細数量
 
 #Message
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
