--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
@@ -55,3 +55,6 @@ BillOfMaterialSubItemQuantity=Sub-item Quantity
 
 #Message
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
