20241223 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -82,7 +82,7 @@ PurGrpAmount=購買グループ仕入金額（当期）
 ChargeableAmount1=有償支給品仕入金額（期首）
 ChargeableAmount2=有償支給品仕入金額（今年初-前期末）
 ChargeableAmount=有償支給品仕入金額（当期）
-ChargeableRate=仕入率
+ChargeableRate=仕入率（%）
 PreviousStockAmount=在庫金額（前期末）
 CurrentStockAmount=在庫金額（当期末）-有償支給品
 CustomerRevenue1=該当得意先の総売上高期初
