--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n.properties
@@ -43,3 +43,6 @@ ReceivingStorageLocation=入庫保管場所
 
 #Message
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
