--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
@@ -43,3 +43,6 @@ ReceivingStorageLocation=Receiving Location
 
 #Message
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
