--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
@@ -54,3 +54,6 @@ NumberOfTimeTickets=No. of Time Tickets
 
 #Message
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
