--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
@@ -54,3 +54,6 @@ NumberOfTimeTickets=作業記録票枚数（作業人数）
 
 #Message
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
