PP-005 作業手順一覧レポート 权限检查

--- a/pp-s4apps01/zroutinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zroutinglist/webapp/i18n/i18n_en.properties
@@ -10,3 +10,7 @@ appDescription=Routing List
 
 #XFLD,36
 flpTitle=Routing List
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
