--- a/pp-s4apps01/zroutinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zroutinglist/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,7 @@ appDescription=作業手順のレポート
 
 #XFLD,36
 flpTitle=作業手順のレポート
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
