PP-009 OF一括登録 权限检查

--- a/pp-s4apps01/zorderforecastupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zorderforecastupload/webapp/i18n/i18n.properties
@@ -37,3 +37,6 @@ Remark=備考
 #Message
 InvalidFileName=アップロードファイル名が無効です。
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
