--- a/pp-s4apps01/zorderforecastupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zorderforecastupload/webapp/i18n/i18n_en.properties
@@ -37,3 +37,6 @@ Remark=Remark
 #Message
 InvalidFileName=The upload file name is invalid.
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
