20241223 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
@@ -103,3 +103,7 @@ Unit=Unit
 msgInputBukrs=Please input CompanyCode
 msgInputYear=Please input FiscalYear
 msgInputMonat=Please input Period
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
