--- a/fico-s4apps01/paidpaydocument/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaydocument/webapp/i18n/i18n.properties
@@ -69,3 +69,8 @@ Message=Message
 msgInputBukrs=Please input CompanyCode
 msgInputYear=Please input FiscalYear
 msgInputMonat=Please input Period
+
+#Message
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
