PP-002 BOMのレポート 20241223

--- a/pp-s4apps01/zbom/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbom/webapp/i18n/i18n.properties
@@ -10,3 +10,7 @@ appDescription=BOMのレポート
 
 #XFLD,24
 flpTitle=BOMのレポート
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
