MM-018 購買情報マスタ一覧 权限检查

--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
@@ -80,3 +80,7 @@ UMCJPPurchasingPrice = UMCJP's Purchasing Price
 
 #XFLD,60
 flpTitle=購買情報マスタ一覧
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
