20241224 MM-009 供給元一覧一括登録

--- a/mm-s4apps01/sourcelistupload/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/sourcelistupload/webapp/i18n/i18n_ja.properties
@@ -38,3 +38,7 @@ SupplierIsFixed=固定供給元
 SourceOfSupplyIsBlocked=ブロック供給元
 MrpSourcingControl=MRP区分
 Xflag=用途
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
