--- a/mm-s4apps01/sourcelistupload/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/sourcelistupload/webapp/i18n/i18n.properties
@@ -38,3 +38,7 @@ SupplierIsFixed=Fixed
 SourceOfSupplyIsBlocked=Blocked
 MrpSourcingControl=Control
 Xflag=Usage
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
