20241224 MM-003 購買発注一括変更

--- a/mm-s4apps01/pochange/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/pochange/webapp/i18n/i18n.properties
@@ -64,3 +64,7 @@ LongText=Long Text
 
 #XFLD,27
 flpTitle=PO change
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
