--- a/mm-s4apps01/pochange/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/pochange/webapp/i18n/i18n_ja.properties
@@ -61,3 +61,7 @@ FixedAsset=資産補助番号
 OrderID=指図
 WBSElementInternalID_2=WBS要素
 LongText=項目テキスト
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
