20241224 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
@@ -71,3 +71,7 @@ DeliveryDate=Delivery Date
 DlvQty=Confirm Qty
 MaterialGroup=Material Group
 MaterialGroupName=Material Group Name
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
