--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -73,3 +73,7 @@ PurgDocPriceDate=価格設定日付
 IsCompletelyDelivered=納入完了PO排除
 MaterialGroup=品目 Group
 MaterialGroupName=品目 Group名
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
