--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
@@ -51,3 +51,7 @@ PurchaseOrderStr=PO Item
 PriceDate=Price Date
 ExcludeDeliveredPO=Exclude Delivered PO
 PurchaseOrderDate=Purchase Order Date
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
