--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
@@ -51,3 +51,7 @@ PurchaseOrderStr=購買発注番号明細
 PriceDate=価格決定日付(マスタ)
 ExcludeDeliveredPO=納入完了PO排除
 PurchaseOrderDate=PO発行日
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
