20241224 PP-024 生産計画立案プラットフォーム

--- a/pp-s4apps01/productionplan/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/productionplan/webapp/i18n/i18n.properties
@@ -52,3 +52,7 @@ msg001=No authorization
 
 #XFLD,45
 flpTitle=Production Plan
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
