--- a/pp-s4apps01/productionplan/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/productionplan/webapp/i18n/i18n_ja.properties
@@ -52,3 +52,7 @@ msg001=No authorization
 
 #XFLD,45
 flpTitle=生産計画立案プラットフォーム
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
