20241224 SD010 得意先検収データアップロード

--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
@@ -85,3 +85,7 @@ flpTitle=Sales Acceptance
 
 #XFLD,48
 flpTitle=Sales Acceptance
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
