--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n_ja.properties
@@ -80,3 +80,6 @@ AcceptPeriodTo=検収期間To
 
 #Message
 msg001=エラーメッセージがあります。ファイルを確認して再インポートしてください
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
