20241224 SD011 売上検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
@@ -56,3 +56,7 @@ ProcessStatus=ProcessStatus
 ReasonCategory=ReasonCategory
 Reason=Reason
 FinishStatus=Finish Status
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
