--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
@@ -56,3 +56,7 @@ ProcessStatus=処理ステータス
 ReasonCategory=要因区分
 Reason=差異要因
 FinishStatus=照合ステータス
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
