--- a/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_ja.properties
@@ -120,3 +120,7 @@ Results=受注({0}件) 受注明細({1}件)
 
 #XFLD,24
 flpTitle=受注管理レポート
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
