20241224 FICO-007_有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -106,4 +106,4 @@ msgInputMonat=Please input Period
 
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
-noAuthorityPlant=プラント {0} の権限がありません。
+noAuthorityCompanyCode=会社コード {0} の権限がありません。
