--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n.properties
@@ -106,4 +106,4 @@ msgInputMonat=Please input Period
 
 getAuthorityFailed=Failed to obtain authority information.
 noAuthorityView=User {0} does not have authority for this app.
-noAuthorityPlant=No authority for plant &1.
+noAuthorityCompanyCode=No authority for companycode &1.
