FICO-006 仕訳印刷 权限检查

--- a/fico-s4apps01/zaccountingdoc/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zaccountingdoc/webapp/i18n/i18n.properties
@@ -13,3 +13,9 @@ i18nprint=出力
 
 #XFLD,20
 flpTitle=仕訳印刷
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
