--- a/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n.properties
@@ -36,3 +36,7 @@ Results=結果
 
 #XFLD,33
 flpTitle=部品使用先一覧レポート
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
