--- a/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n_ja.properties
@@ -36,3 +36,7 @@ NoDisplayNonProduct=削除フラグ製品対象外
 DisplayPurchasingInfo=購買情報表示
 
 Results=結果
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
