PP-032 在庫/所要一覧レポート 权限检查

--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n.properties
@@ -87,3 +87,6 @@ OrderDate=発注日
 #Message
 NoData=対象データが無いです。
 PeriodEndDateIsPast=期間終了日が過去の日付ではならない。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
