--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -124,4 +124,8 @@ PrType2Text=物品請求書
 PrType3Text=製作指示書
 
 zattachment=添付ファイル 
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
  
