--- a/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
@@ -125,3 +125,7 @@ DoneMessage=再計算完了
 
 #XFLD,36
 flpTitle=長期滞在＆低価法レポート
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityCompany=会社コード {0} の権限がありません。
