PP-025 製造指図と受注の割当関係登録 权限检查

--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
@@ -47,3 +47,7 @@ Message2=Assign quantity of sales order {0} {1} is greater unassign quantity.
 Message3=Sum assign quantity {0} is greater than available assign quantity {1}.
 Message4=Assign quantity of sales order {0} {1} is greater item quantity.
 Message5=Sum assign quantity {0} is not equal to the available assign quantity {1}, please check.
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
