--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
@@ -44,3 +44,7 @@ Message2=受注 {0} {1} の割当数が未割当数より多くなる。
 Message3=割当合計数 {0} が割当可能数 {1} より多くなる。
 Message4=受注 {0} {1} の割当数が明細数量より多くなる。
 Message5=割当合計数 {0} ≠ 割当可能数 {1}、割当数を確認してください。
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
