20241226 SD-032 販売計画一覧 权限检查

--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -70,3 +70,9 @@ GLAccountName3=GLAccountName3
 DisplayCurrency1=DisplayCurrency1
 currency=currency
 currency1=currency1
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
