PP-013 OF分割ルールマスタ管理 权限检查

--- a/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
@@ -38,3 +38,6 @@ DeleteFlag=Delete Flag
 
 #Message
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
