--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
@@ -95,3 +95,9 @@ inventorytype=カテゴリ
 baseUnitOfMeasure=Base Unit of Measure
 
 InventoryType=カテゴリー（A：期初／B：関係会社）
+
+#Message
+ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
