--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
@@ -93,3 +93,9 @@ inventorytype=Inventory Type
 baseUnitOfMeasure=Base Unit of Measure
 
 InventoryType=Inventory Type
+
+#Message
+ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
