20241226 FICO-020 連結勘定一括登録 权限检查

--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
@@ -78,4 +78,11 @@ changedBy=changed By
 
 #XFLD,120: Label for a column title
 glAccountLongName=G/L Account Name
+
+#Message
+ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
+
  
