--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n.properties
@@ -82,3 +82,9 @@ glAccountLongName=G/L勘定テキスト
 
 #XFLD,57
 flpTitle=連結勘定とG/L勘定マッピング関係登録
+
+#Message
+ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
