--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
@@ -78,4 +78,11 @@ changedBy=変更者
 
 #XFLD,120: Label for a column title
 glAccountLongName=G/L勘定テキスト
+
+
+#Message
+ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
  
