--- a/pp-s4apps01/zledplannedordercomponent/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zledplannedordercomponent/webapp/i18n/i18n.properties
@@ -19,3 +19,6 @@ selectOperation=機能操作を選択してください。
 confirmMessage={0}しますか？
 confirmMessage1=不足品目があるので、提案が受入できない。
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
