--- a/pp-s4apps01/zledversioninfo/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zledversioninfo/webapp/i18n/i18n.properties
@@ -36,3 +36,6 @@ DeleteFlag=削除フラグ
 
 #Message
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
