20241229 BI-002 日別在庫金額照会 权限检查

--- a/fico-s4apps01/zdaystocktrans/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zdaystocktrans/webapp/i18n/i18n.properties
@@ -13,3 +13,7 @@ flpTitle=日別在庫金額照会
 
 #XFLD,24
 flpTitle=日別在庫金額照会
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityCompany=会社コード {0} の権限がありません。
