20241229 SD-016 出荷伝票外部移転の日付一括更新 权限检查

--- a/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n_ja.properties
@@ -60,3 +60,7 @@ IntcoIntPlndTransfOfCtrlDteTme=内部計画日付
 IntcoIntActlTransfOfCtrlDteTme=内部実績日付
 
 msgDate=YYYYMMDD形式で入力してください。
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
