--- a/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n.properties
@@ -62,3 +62,7 @@ IntcoIntActlTransfOfCtrlDteTme=内部実績日付
 YY1_SalesDocType_DLH=受注タイプ(Old)
 
 msgDate=YYYYMMDD形式で入力してください。
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
