--- a/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n.properties
@@ -17,3 +17,6 @@ CloseBtn=Close
 #Text
 confirmMessage=Would you like to {0}?
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
