--- a/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
@@ -15,3 +15,6 @@ Release=製造指図発行
 CloseBtn=閉じる
 #Text
 confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
