PP-011 OFとSO比較照会 权限检查

--- a/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
@@ -13,6 +13,7 @@ title=OFとSO比較照会
 #XFLD,27
 flpTitle=OFとSO比較照会
 Results=結果
+Export=エクセル出力
 
 Duration=所要期間
 LatestOF=最新OFデータのみ
@@ -32,3 +33,7 @@ Contents=表示内容
 Contents1=OF＆SO
 Contents2=OFのみ
 Contents3=SOのみ
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
