20241230 FICO-015 支払方法変更 权限检查

--- a/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zpaymentmethod/webapp/i18n/i18n.properties
@@ -53,3 +53,7 @@ Status=ステータス
 Message=メッセージ
 msgNoSelect=まずデータを選択してください
 msgFilterError=一意の説明を入力するか、一覧からアイテムを選択してください。
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
