SD-031 与信管理表 权限检查

--- a/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
@@ -34,3 +34,7 @@ zmonth9=9月
 zmonth10=10月
 zmonth11=11月
 zmonth12=12月
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
