BI-004 逆ザヤ防止分析 权限检查

--- a/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
@@ -58,4 +58,5 @@ profitcenter=利益センタ
 profitcentername=利益センタテキスト
 yieldqty=製品生産入庫数量
 
-
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
