20241230 FICO-020 連結勘定残高試算表

--- a/fico-s4apps01/zbindglaccountlist/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zbindglaccountlist/webapp/i18n/i18n.properties
@@ -14,3 +14,9 @@ tableHeaderTitle=連結勘定残高試算表
 flpTitle=連結勘定残高試算表
 
 SumStatus=合計
+
+#Message
+ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
