BI-006 長期滞留在庫実績 权限检查

--- a/bi-s4apps01/longterminventory/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/longterminventory/webapp/i18n/i18n.properties
@@ -3,27 +3,28 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Long-Term Inventory
+appTitle=長期滞留在庫実績
 
 #YDES: Application description
-appDescription=Long-Term Inventory
-#XTIT: Main view title
-title=Long-Term Inventory
+appDescription=長期滞留在庫実績
 
 #XFLD,57
-flpTitle=Long-Term Inventory
+flpTitle=長期滞留在庫実績
 
-fiscalYear=Fiscal Year
-fiscalMonth=Fiscal Period
-yearMonth=Year Month
-type=Type
-company=Company
-plant=Plant
-materialType=Material Type
-product=Product
-businessPartner=Business Partner
-profitCenter=Profit Center
-actualPrice=Actual Price
-longTermInventory=Long-term inventory
-longTermInventoryAmount=Long-term inventory Amount
-currency=Currency
+fiscalYear=会計年度
+fiscalMonth=会計期間
+yearMonth=年月
+type=タイプ
+company=会社コード
+plant=プラント
+materialType=品目タイプ
+product=製品
+businessPartner=得意先
+profitCenter=利益センタ
+actualPrice=実際原価
+longTermInventory=長期滞留在庫
+longTermInventoryAmount=長期滞留在庫金額
+currency=通貨
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
