--- a/bi-s4apps01/longterminventory/webapp/i18n/i18n_ja.properties
+++ b/bi-s4apps01/longterminventory/webapp/i18n/i18n_ja.properties
@@ -25,3 +25,6 @@ actualPrice=実際原価
 longTermInventory=長期滞留在庫
 longTermInventoryAmount=長期滞留在庫金額
 currency=通貨
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
