BI-007 長期滞留在庫予測 权限检查

--- a/bi-s4apps01/longtermforcast/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/longtermforcast/webapp/i18n/i18n.properties
@@ -1,31 +1,32 @@
-# This is the resource bundle for bi.longterminventory
+# This is the resource bundle for bi.longtermforcast
 
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Long-Term Forcast
+appTitle=長期滞留在庫予測
 
 #YDES: Application description
-appDescription=Long-Term Forcast
-#XTIT: Main view title
-title=Long-Term Forcast
+appDescription=長期滞留在庫予測
 
 #XFLD,57
-flpTitle=Long-Term Forcast
+flpTitle=長期滞留在庫予測
 
-fiscalYear=Base Fiscal Year
-fiscalMonth=Base Fiscal Period
-forcastYear=Forcast Fiscal Year
-forcastMonth=Forcast Fiscal Period
-yearMonth=Year Month
-type=Type
-company=Company
-plant=Plant
-materialType=Material Type
-product=Product
-businessPartner=Business Partner
-profitCenter=Profit Center
-actualPrice=Actual Price
-longTermInventory=Long-term inventory
-longTermInventoryAmount=Long-term inventory Amount
-currency=Currency
+fiscalYear=実行会計年度
+fiscalMonth=実行会計期間
+forcastYear=予測年度
+forcastMonth=予測期間
+yearMonth=年月
+type=タイプ
+company=会社コード
+plant=プラント
+materialType=品目タイプ
+product=製品
+businessPartner=得意先
+profitCenter=利益センタ
+actualPrice=実際原価
+longTermInventory=長期滞留在庫
+longTermInventoryAmount=長期滞留在庫金額
+currency=通貨
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
