--- a/fico-s4apps01/zmfgorder/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zmfgorder/webapp/i18n/i18n.properties
@@ -24,10 +24,10 @@ key3=工程別加工費
 flpTitle={{flpTitle}}
 
 #XFLD,120: Label for a column title
-costratescalefactor1=計画原価比率スケールファクタ
+costratescalefactor1=計画価格単位
 
 #XFLD,120: Label for a column title
-costratescalefactor2=実際原価比率スケールファクタ
+costratescalefactor2=実際価格単位
 
 #XFLD,120: Label for a column title
 orderid=製造指図
