--- a/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
@@ -20,11 +20,12 @@ key2=品目元帳の部材費
 
 #XTIT: Title of the application
 key3=工程別加工費
-#XFLD,120: Label for a column title
-costratescalefactor1=計画原価比率スケールファクタ
 
 #XFLD,120: Label for a column title
-costratescalefactor2=実際原価比率スケールファクタ
+costratescalefactor1=計画価格単位
+
+#XFLD,120: Label for a column title
+costratescalefactor2=実際価格単位
 
 #XFLD,120: Label for a column title
 orderid=製造指図
