MM-020 購買発注入庫実績一括登録 权限检查

--- a/mm-s4apps01/poposting/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/poposting/webapp/i18n/i18n_en.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for pp.zbomupload
+# This is the resource bundle for mm.poposting
 
 #Texts for manifest.json
 
@@ -41,3 +41,6 @@ StorageLocation=Storage Location
 
 #Message
 ProcessingCompleted=Processing Completed.
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
