--- a/mm-s4apps01/poposting/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poposting/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for pp.zbomupload
+# This is the resource bundle for mm.poposting
 
 #Texts for manifest.json
 
@@ -41,3 +41,6 @@ StorageLocation=保管場所
 
 #Message
 ProcessingCompleted=処理が完了しました。
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
