BI-003 回収進捗管理分析 权限检查

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -112,3 +112,7 @@ GLAccount=勘定科目
 GLAccountText=勘定科目テキスト
 SSQuantity=品目入出庫伝票数量
 SSAmount=品目伝票明細金額
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityCompany=会社コード {0} の権限がありません。
