--- a/mm-s4apps01/podataanalysis/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/podataanalysis/webapp/i18n/i18n.properties
@@ -10,3 +10,8 @@ appDescription=PO状況分析レポート
 
 #XFLD,48
 flpTitle=PO状況分析レポート
+
+#AUTH message 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
