--- a/mm-s4apps01/physicalinventoryupload/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/physicalinventoryupload/webapp/i18n/i18n.properties
@@ -37,3 +37,8 @@ PhysicalInventoryItemIsZero=検数ゼロ
 Batch=Batch no
 ReasonForPhysInvtryDifference=差異理由
 BaseUnit=基本数量単位
+
+#権限チェック
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
