--- a/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zmfgorder/webapp/i18n/i18n_ja.properties
@@ -41,3 +41,9 @@ key4=伝票タイプ
 
 #XFLD,120: Label for a column title
 orderitem=明細
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
