--- a/fico-s4apps01/fixedassetprint/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/fixedassetprint/webapp/i18n/i18n.properties
@@ -19,3 +19,10 @@ key1=資本化日付
 
 #XFLD,39
 flpTitle=固定資産新規登録申請書出力
+
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
