--- a/fico-s4apps01/fixedassetprint/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/fixedassetprint/webapp/i18n/i18n_en.properties
@@ -16,3 +16,15 @@ key=追記テキスト
 
 #XFLD,120: Label for a filter field
 key1=資本化日付
+
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+ 
+#Text
+selectOperation=Please select a function operation.
+confirmMessage=Would you like to {0}?
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
+noAuthorityPlant=No authority for plant &1.
