--- a/fico-s4apps01/fixedassetprint/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/fixedassetprint/webapp/i18n/i18n_ja.properties
@@ -16,3 +16,10 @@ key=追記テキスト
 
 #XFLD,120: Label for a filter field
 key1=資本化日付
+
+
+#Text
+selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
