PP-016 ピッキングリスト管理 逻辑调整

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -91,6 +91,7 @@ Message5=No. {0} the transfer quantity has exceeded the total short fall quantit
 Message6=No. {0} please enter the {1}.
 Message7=Only one reservation can be processed.
 Message8=Reservation {0} Item {1} is not waiting to be posted.
+Message9=The transfer quantity of {0} items exceeds the stock quantity. Do you want to register it?
 
 StandardListFileName=Picking List_Registration
 CustomListFileName=Picking List
