--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
@@ -91,6 +91,7 @@ Message5=行 {0} の移動数量は欠品数量を超えました。
 Message6=行 {0} {1}を入力してください。
 Message7=入出庫予定処理件数は1件しか処理できません。
 Message8=入出庫予定 {0} 明細 {1} は転記待データではありません。
+Message9={0} 件移動数量は在庫数量を超えました。登録しますか。
 
 StandardListFileName=ピッキングリスト_登録一覧
 CustomListFileName=ピッキングリスト一覧
