--- a/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n_en.properties
@@ -10,3 +10,6 @@ appDescription=Workflow Approval Configuration Management
 
 #XFLD,63
 flpTitle=Workflow Approval Configuration Management
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
