--- a/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n_ja.properties
+++ b/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,6 @@ appDescription=ワークフロー承認管理
 
 #XFLD,63
 flpTitle=ワークフロー承認管理
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
