BC-006 ロール権限一覧 权限检查

--- a/bc-s4apps01/zauthorityrolelist/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zauthorityrolelist/webapp/i18n/i18n_en.properties
@@ -10,3 +10,6 @@ appDescription=Role Authority List
 
 #XFLD,57
 flpTitle=Role Authority List
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
