--- a/bc-s4apps01/zauthorityrolelist/webapp/i18n/i18n_ja.properties
+++ b/bc-s4apps01/zauthorityrolelist/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,6 @@ appDescription=ロール権限一覧
 
 #XFLD,57
 flpTitle=ロール権限一覧
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
