--- a/bc-s4apps01/zauthorityuserlist/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zauthorityuserlist/webapp/i18n/i18n_en.properties
@@ -10,3 +10,6 @@ appDescription=User Authority List
 
 #XFLD,57
 flpTitle=User Authority List
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
