20250102 購買申請登録とファイル添付 权限检查

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -22,6 +22,10 @@ msgSaveSuccessed=変更内容は保存されました
 msgDuplicate=登録粒度不一致データがあります，チェックしてください。
 msgNoSelect=まずデータを選択してください
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
+
 #XBUT,12: UploadView.checkBtn
 UploadView.checkBtn = チェック
 #XBUT,12: UploadView.saveBtn
