--- a/pp-s4apps01/oflist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/oflist/webapp/i18n/i18n.properties
@@ -12,6 +12,9 @@ title=OF一覧照会
 
 tableHeaderTitle=OF一覧
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+
 Yes=はい
 No=いいえ
 
