--- a/pp-s4apps01/ofpartition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/ofpartition/webapp/i18n/i18n.properties
@@ -23,6 +23,8 @@ uploadText=ファイルアップロード
 result=結果
 
 msgNoSelect=明細行を選択してください
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
 
 Status=ステータス
 Result=結果
